--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 Shopping Cart
             </h3>
             <p class="text-body-secondary">
-                An E-commerce web app which lets you buy products from online. Build with JS, Bootstrap, HTML and CSS.
+                An E-commerce web app which lets you buy products from online. Built with JS, Bootstrap, HTML and CSS.
             </p>
             <div style="display: flex;">
                 <p><a href="https://shoppingcarttechm.netlify.app/" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" style="text-decoration: none;border-radius: 0.5rem;padding: 0.1rem;" target="_blank">View Live Project</a></p>
