--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container-fluid">
               <a class="navbar-brand" href="#home">
                 <img src="images/code-slash-outline.svg" alt="Bootstrap" width="30" height="24">
-                Portfolio site
+                Portfolio
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
